fix: clarify volatile size field thread-safety and improve logging
- Add @SuppressWarnings with explanation: mutations are serialized by
  write lock
- Change logging to slf4j parameterized format instead of String.format